Bug 317810 - "plasma-mediacenter --version" gives 0.1, while the public known version is 1.0.0
Summary: "plasma-mediacenter --version" gives 0.1, while the public known version is 1...
Status: RESOLVED FIXED
Alias: None
Product: plasma-mediacenter
Classification: Unmaintained
Component: General (other bugs)
Version First Reported In: 1.0.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Sinny Kumari
URL:
Keywords:
Depends on:
Blocks: 321239
  Show dependency treegraph
 
Reported: 2013-04-04 03:29 UTC by Jekyll Wu
Modified: 2013-06-16 18:40 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jekyll Wu 2013-04-04 03:29:55 UTC
The version mentioned in the public release news [1] is 1.0.0. That is also the version used in the tarball name. But clearly the code itself still uses "0.1" when constructing KAboutData. 

This is minor issue but really confusing. Please make them consistent .

[1] http://news.kde.org/2013/03/20/plasma-media-center-release-one

Reproducible: Always
Comment 1 Sinny Kumari 2013-04-04 12:03:46 UTC
Git commit f475bdcf2f91b1496918674c141316549c649455 by Sinny Kumari.
Committed on 04/04/2013 at 14:00.
Pushed by sinnykumari into branch 'master'.

Updated Plasma Media Center Version to 1.0.0
Changed and corrected help information

M  +10   -6    shells/newshell/main.cpp

http://commits.kde.org/plasma-mediacenter/f475bdcf2f91b1496918674c141316549c649455
Comment 2 Sinny Kumari 2013-04-04 12:05:06 UTC
Thank you for pointing out. It has been fixed now !