BUG: 317810

Updated Plasma Media Center Version to 1.0.0
Changed and corrected help information